add CF R 935 and ???

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -50,7 +50,19 @@
       "group": {
         "kind": "build",
         "isDefault": true
+      }
+    },
+    {
+      "label": "Build: cargo or rustc",
+      "type": "shell",
+      "command": "${workspaceFolder}/.vscode/rust_build.sh ${fileDirname} ${fileBasenameNoExtension} ${workspaceFolder}",
+      "group": {
+        "kind": "build",
+        "isDefault": true
       },
+      "problemMatcher": [
+        "$rustc"
+      ]
     }
   ],
   "version": "2.0.0"
